DEVOPS/Kubernetes/ingress/ingress-resource.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: voguenest.tayolab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: voguenest-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: notewatchapi-service
                port:
                  number: 80
